--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,13 +8,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
+  - title: "Code Portfolio"
     url: /portfolio/
         
   - title: "Blog Posts"
